<resources>
    <string name="app_name" translatable="false">Smartspacer</string>
    <string name="shortcut_name_smartspace" translatable="false">Smartspace</string>
    <string name="xposed_desc"><b>Optional</b>: Enable this module on your launcher or launcher\'s Google Feed plugin to allow replace Google Discover with Expanded Smartspace. You must also enable the option in the Expanded Smartspace settings in Smartspacer.</string>
    <string name="dummy_home_content">This screen exists to work around badly implemented Widgets used by Smartspacer Plugins.\n\nSmartspacer can\'t act as a launcher, please select a different launcher.</string>
    <string name="dummy_home_open_settings">Open Settings</string>
    <string name="notification_service">Smartspacer Notification Service</string>
    <string name="loading">Loading…</string>
    <string name="saving">Saving…</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="close">Close</string>
    <string name="reset">Reset</string>
    <string name="menu_rerun_setup">Re-run setup</string>
    <string name="bottom_nav_targets">Targets</string>
    <string name="bottom_nav_complications">Complications</string>
    <string name="bottom_nav_plugins">Plugins</string>
    <string name="bottom_nav_settings">Settings</string>
    <string name="download_size" translatable="false">%1s / %1s</string>
    <string name="toast_restricted_mode">Allow restricted settings in the overflow menu</string>
    <string name="restricted_mode_content_accessibility">Since Android 13, Google added a security check to the settings, preventing sideloaded apps from being allowed to use Accessibility Services by default.\n\n<b>If you see a message about a restricted setting when trying to enable the accessibility service, you need to open App Info allow restricted settings.</b></string>
    <string name="restricted_mode_content_warning_accessibility"><![CDATA[Since Android 14, Google have prevented apps sideloaded using the Package Installer from using Accessibility Services.<br><br><b>If you see a message about restricted settings, you must uninstall Smartspacer and reinstall it using a session installer-based app like <a href="https://play.google.com/store/apps/details?id=com.aefyr.sai">Split APKs Installer (SAI)</a> or the <a href="https://play.google.com/store/apps/details?id=com.apkmirror.helper.prod">APKMirror app</a>. Installing on top (without reinstalling) is NOT sufficient.<br><br></b>Alternatively, with Enhanced Mode enabled, Smartspacer will bypass this requirement (it cannot be done without Shizuku or root).]]></string>
    <string name="restricted_mode_content_notification">Since Android 13, Google added a security check to the settings, preventing sideloaded apps from being allowed to use Notification Access by default.\n\n<b>If you see a message about a restricted setting when trying to enable notification access, you need to open App Info allow restricted settings.</b></string>
    <string name="restricted_mode_content_warning_notification"><![CDATA[Since Android 14, Google have prevented apps sideloaded using the Package Installer from being allowed to use Notification Access.<br><br><b>If you see a message about restricted settings, you must uninstall Smartspacer and reinstall it using a session installer-based app like <a href="https://play.google.com/store/apps/details?id=com.aefyr.sai">Split APKs Installer (SAI)</a> or the <a href="https://play.google.com/store/apps/details?id=com.apkmirror.helper.prod">APKMirror app</a>. Installing on top (without reinstalling) is NOT sufficient.<br><br></b>Alternatively, with Enhanced Mode enabled, Smartspacer will bypass this requirement (it cannot be done without Shizuku or root).]]></string>
    <string name="restricted_mode_button">Open App Info</string>
    <string name="restricted_mode_warning_button">Grant Permission with Shizuku</string>
    <string name="target_sensitive_title">Contents hidden</string>
    <string name="tint_colour_automatic">Automatic (Wallpaper Based)</string>
    <string name="tint_colour_automatic_alt">Automatic (Theme Based)</string>
    <string name="tint_colour_automatic_content">Text and icons in the widget will automatically be tinted to be visible on the wallpaper</string>
    <string name="tint_colour_automatic_content_alt">Text and icons in the notification will automatically be tinted to be visible based on your theme</string>
    <string name="tint_colour_white">White</string>
    <string name="tint_colour_white_content">Text and icons in the widget will always be white</string>
    <string name="tint_colour_white_content_alt">Text and icons in the notification will always be white</string>
    <string name="tint_colour_black">Black</string>
    <string name="tint_colour_black_content">Text and icons in the widget will always be black</string>
    <string name="tint_colour_black_content_alt">Text and icons in the notification will always be black</string>
    <string name="widget_title_smartspacer" translatable="false">@string/app_name</string>
    <string name="widget_description_smartspacer">Show Smartspacer Targets &amp; Complications</string>
    <string name="widget_loading_smartspacer">Loading…</string>
    <string name="widget_loading_smartspacer_subtitle">Check the Smartspacer Accessibility Service is enabled if this message persists</string>
    <string name="widget_configuration_title">Smartspacer Widget</string>
    <string name="widget_configuration_tab_horizontal">Horizontal</string>
    <string name="widget_configuration_tab_vertical">Vertical</string>
    <string name="widget_configuration_horizontal_info"><b>Note:</b> Due to an Android limitation, widgets cannot be scrolled horizontally. Instead, the Smartspacer Widget has controls to change pages on tap.</string>
    <string name="widget_configuration_vertical_info"><b>Note:</b> You may experience performance issues and higher battery usage when using the list widget. This is due to the whole widget needing to update for every change, and cannot be fixed.</string>
    <string name="widget_configuration_accessibility_title">Enable Accessibility Service</string>
    <string name="widget_configuration_accessibility_content">The Smartspacer Widget requires an Accessibility Service to know which app is currently open on your device, and start/stop Targets and Complications. This allows them to be kept up to date, without needing to run all the time - saving on battery.</string>
    <string name="widget_configuration_accessibility_enable">Tap to enable</string>
    <string name="widget_configuration_behaviour_title">Behaviour</string>
    <string name="widget_configuration_is_lock_screen_title">Lock Screen Widget</string>
    <string name="widget_configuration_is_lock_screen_content">Enable <b>only</b> if this widget is being added to the lock screen.\nThis does <b>not</b> add the widget to the lock screen on its own, download an app from Google Play such as \"Lockscreen Widgets\" to do so.</string>
    <string name="safe_mode_title">Safe Mode</string>
    <string name="safe_mode_content">Smartspacer entered safe mode due to an app crashing, to prevent a crash-loop. These crashes are usually caused by a misbehaving target or complication, so if they persist check for updates to your plugins.</string>
    <string name="safe_mode_relaunch">Relaunch Smartspacer</string>
    <string name="configuration_notification_association_title">Grant Permissions</string>
    <string name="configuration_notification_association_content">In order to allow Smartspacer to access a list of other apps\' notification channels so you can pick which to show, you must set a companion device or network for this app. This is a (rather odd) Android system requirement, and is the only way to get a list of channels without root. This only needs to be done once.</string>
    <string name="configuration_notification_association_subcontent">Tap the \"Set Companion\" button below, and select any device or connection from the list that appears.\n\n<b>It does not matter if the device/connection is yours, or whether you will be in range of it while using Smartspacer. Smartspacer does not pair or connect to the device you pick</b>. You may also need to have GPS enabled for devices and connections to appear in the dialog.</string>
    <string name="configuration_notification_association_button">Set Companion</string>
    <string name="configuration_notification_association_read_more">Read more about this requirement</string>
    <string name="settings_hide_sensitive_contents_title_short">Hide Sensitive</string>
    <string name="settings_dump_title_short">Dump</string>
    <string name="setup_targets_info_p1"><b>Targets</b> are pages of information displayed on Smartspace, usually consisting of at least a title, subtitle and icon. Many Targets also have extra information - where supported - such as images or lists.</string>
    <string name="setup_targets_info_p2">Targets can either be dynamic, showing and hiding as required, or static and display all the time. You can further customise when they appear using <b>Requirements</b>, and the settings provided by many Targets (accessible by tapping a Target in Smartspacer\'s UI).</string>
    <string name="setup_targets_info_p3">Smartspacer\'s At a Glance integration is provided by the \"At a Glance\" Target, which can display the regular information from Google such as calendar events and flights. Please note that this does <b>not</b> always show today\'s date if no information is available, and you should add the \"Date\" Target separately if you wish to always have the date visible.</string>
    <string name="setup_targets_caption_google_maps">Example of a Target with an image</string>
    <string name="setup_targets_caption_list">Example of a Target with a list</string>
    <string name="setup_targets_controls_next">Next</string>
    <string name="enhanced_mode_title">Enhanced Mode</string>
    <string name="native_title">Native Smartspace</string>
    <string name="native_mode_settings_title">Native Smartspace</string>
    <string name="native_mode_settings_target_limit_title">Page Limit</string>
    <string name="expanded_settings_title_short">Expanded</string>
    <string name="expanded_settings_search_provider_title">Search Provider</string>
    <string name="expanded_settings_open_mode_home_screen_title_short">Home Screen</string>
    <string name="expanded_settings_open_mode_lock_screen_title_short">Lock Screen</string>
    <string name="oem_smartspace_title">OEM Smartspace</string>
    <string name="battery_optimisation_title">Battery Optimisation</string>
    <string name="plugin_settings_title">Plugin Repository</string>
    <string name="donate_paragraph_1">Thank you for considering making a donation. Smartspacer is a complex app and has taken a lot of time in development, even though it is available for free and is open source.</string>
    <string name="donate_paragraph_2">If you would like to donate, currently the only available option is PayPal (linked below). Other options may be available in the future, if required - open a GitHub issue if you have a suggestion. Additionally, direct payment options such as Wise can be provided on request.</string>
    <string name="donate_paragraph_3">If you have already donated or are unable to at this time, you can hide the donation prompt banner permanently below (you will still be able to access this screen from the bottom of the settings).</string>
    <string name="donate_disable">Hide Donation Prompt</string>
    <string name="donate_paypal">PayPal</string>
    <string name="permissions_title">Permissions</string>
    <string name="notification_widget_title_short">Lock Screen</string>
    <string name="about_contributors">Contributors</string>
</resources>