<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:transitionGroup="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/margin_16">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/donate_paragraph_1"
            android:textAppearance="@style/TextAppearance.AppCompat.Small.Smartspacer" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:text="@string/donate_paragraph_2"
            android:textAppearance="@style/TextAppearance.AppCompat.Small.Smartspacer" />

        <TextView
            android:id="@+id/donate_hide_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:text="@string/donate_paragraph_3"
            android:textAppearance="@style/TextAppearance.AppCompat.Small.Smartspacer" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/donate_paypal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16"
            android:text="@string/donate_paypal"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium.Smartspacer"
            app:icon="@drawable/ic_paypal" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/donate_disable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/donate_disable"
            android:textAppearance="@style/TextAppearance.AppCompat.Small.Smartspacer"
            android:textColor="?android:textColorPrimary" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>